Some nitty simplification of Stream usage
Co-Authored-By: IntelliJ