@@ -39,7 +39,6 @@ import java.util.SplittableRandom;
 import java.util.TreeSet;
 import java.util.function.LongPredicate;
 import java.util.function.LongUnaryOperator;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -86,7 +85,7 @@ class ComponentNodesTest {
         }
         assertThat(idxUpperBoundPerComponent.get(7)).isEqualTo(-1L);
         int previousUpperBound = -1;
-        for (long key : componentPerIdxUpperBound.keySet().stream().sorted().collect(Collectors.toList())) {
+        for (long key : componentPerIdxUpperBound.keySet().stream().sorted().toList()) {
             switch ((int) (key - previousUpperBound)) {
                 case 1: assertThat(componentPerIdxUpperBound.get(key)).isEqualTo(4);break;
                 case 2: assertThat(componentPerIdxUpperBound.get(key)).isEqualTo(5);break;
