@@ -22,7 +22,6 @@ package org.neo4j.gds.algorithms.machinelearning;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 import static org.neo4j.gds.utils.StringFormatting.formatWithLocale;
 import static org.neo4j.gds.utils.StringFormatting.toUpperCaseWithLocale;
@@ -34,7 +33,7 @@ public enum ScoreFunction {
     private static final List<String> VALUES = Arrays
         .stream(ScoreFunction.values())
         .map(ScoreFunction::name)
-        .collect(Collectors.toList());
+        .toList();
 
     public static ScoreFunction parse(Object input) {
         if (input instanceof String) {
